--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Shyam Weds Ranjana</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
+    <link href="css/agency.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Shyam Weds Ranjana</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,16 +53,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#our-story">Our Story</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">In Pictures</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">About Us</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -78,14 +78,27 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in">Shyam And Ranjana are tying the knot on</div>
+                <div class="intro-heading">16<sup>th</sup> of February 2016</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
 
+    <!--Our Story Section-->
+    <section id="our-story">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Story of Us</h2>
+                    <h3 class="section-subheading text-muted">Weddings are made in heaven, may be that is why we met at one. She was shy and I was quiet. It took us some time to graduate from being friends but when we did, we couldn't have been surer of each other</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Services Section -->
+    <!--
     <section id="services">
         <div class="container">
             <div class="row">
@@ -122,6 +135,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
@@ -226,8 +240,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Events</h2>
+                    <h3 class="section-subheading text-muted">Marriages are meant to last forever, so shall be it celebrated</h3>
                 </div>
             </div>
             <div class="row">
@@ -239,11 +253,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>Engagement</h4>
+                                    <h4 class="subheading">13<sup>th</sup> December 2016</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Venue: Rama Krishna Mandir, Ashok Vihar Phase 3, Delhi - 110052</p>
                                 </div>
                             </div>
                         </li>
@@ -253,11 +267,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>Shagun</h4>
+                                    <h4 class="subheading">Monday, 13<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted"><b>Venue:</b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 <br><b>Timing:</b> 5 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -267,11 +281,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>Departure of Baraat</h4>
+                                    <h4 class="subheading">Thursday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted"><b>Venue:</b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 <br><b>Timing:</b> 7 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -281,11 +295,39 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4>Dinner</h4>
+                                    <h4 class="subheading">Thursday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted"><b>Venue:</b>Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084<br><b>Timing:</b>9 PM</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Shaadi</h4>
+                                    <h4 class="subheading">Tuesday, 21<sup>th</sup> February 2017</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted"><b>Venue:</b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 <br><b>Timing:</b> 10 PM</p>
+                                </div>
+                            </div>
+                        </li>
+                         <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Vidaai</h4>
+                                    <h4 class="subheading">Thursday, 16<sup>th</sup> February 2017</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted"><b>Venue:</b>Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084<br><b>Timing:</b>9 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -307,16 +349,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-muted">Meet Us</h2>
+                    <h3 class="section-subheading text-muted">Shyam and Ranjana</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
-                        <p class="text-muted">Lead Designer</p>
+                        <h4 class="text-muted">Shyam Jha</h4>
+                        <p class="text-muted">Assistant Engineer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -327,11 +369,11 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                        <h4 class="text-muted">Ranjana Mishra</h4>
+                        <p class="text-muted">M.Com Graduate</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
                             </li>
@@ -342,22 +384,6 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
