added animate api

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <style type="text/css">
+        #our-story{
+            background: #9C3A19;
+        }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,26 +82,28 @@
 
     <!-- Header -->
     <header>
-        <div class="container">
+        <div class="container fadeInLeft">
             <div class="intro-text">
                 <div class="intro-lead-in">Shyam And Ranjana are tying the knot on</div>
                 <div class="intro-heading">16<sup>th</sup> of February 2016</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#about" class="page-scroll btn btn-xl">EVENTS</a>
             </div>
         </div>
     </header>
 
+    
     <!--Our Story Section-->
     <section id="our-story">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Story of Us</h2>
-                    <h3 class="section-subheading text-muted">Weddings are made in heaven, may be that is why we met at one. She was shy and I was quiet. It took us some time to graduate from being friends but when we did, we couldn't have been surer of each other</h3>
+                    <h2 class="section-heading">From the Bridegoom</h2>
+                    <h3 class="section-subheading text-muted"><I>It's truly said that "Pairs are made in heaven but they are celebrated on earth" Two hearts, two souls, one love for all time!<br>Your presence will give us immense pleasure! Kindly  treat this e-Invitation as Personal Invitation and grace us with your presence and bestow the best wishes to make the day of our wedding most memorable.  Your presence will multiply our joy and happiness. Awaiting your august presence...</I> - <b> Shyam Jha</b></h3>
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- Services Section -->
     <!--
@@ -388,40 +396,11 @@
                 </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Weddings are made in heaven, may be that is why we met at one. She was shy and I was quiet. It took us some time to graduate from being friends but when we did, we couldn't have been surer of each other</p>
                 </div>
             </div>
         </div>
     </section>
-
-   <!--
-    <aside class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </aside>
-    -->
 
     <!-- Contact Section -->
     <section id="contact">
