--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <style type="text/css">
         #our-story{
-            background: #9C3A19;
+            background: #4D021B;
         }
     </style>
 
@@ -82,9 +82,9 @@
 
     <!-- Header -->
     <header>
-        <div class="container fadeInLeft">
+        <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Shyam And Ranjana are tying the knot on</div>
+                <div class="intro-lead-in bounce">Shyam And Ranjana are tying the knot on</div>
                 <div class="intro-heading">16<sup>th</sup> of February 2016</div>
                 <a href="#about" class="page-scroll btn btn-xl">EVENTS</a>
             </div>
