--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
                         <a class="page-scroll" href="#our-story">Our Story</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">In Pictures</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#about">Events</a>
                     </li>
                     <li>
@@ -410,35 +407,11 @@
     </section>
 
     <!-- google maps -->
-   <section id="maps">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">See On Maps</h2>
-                    <div id="map"></div>
-    <script>
-      function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map
-        });
-      }
-    </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key= AIzaSyBPCtkaojsY5yX7fnL_scMOCHbFdIUcPCI &callback=initMap">
-    </script>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+    <section id="maps">
+                    <h2 class="section-heading text-center">See On Maps</h2>
+                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3497.992446334719!2d77.19631111457137!3d28.749642485522838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfe28e92a0047%3A0x81fec8c095248759!2sShanti+Kunj+Party+Lawn!5e0!3m2!1sen!2sin!4v1485385852807" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
+
     <!-- maps section closed-->
 
     <!-- Contact Section -->
