--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#our-story">Our Story</a>
+                        <a class="page-scroll" href="#our-story">From The Bridegroom</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Events</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#maps">See On Maps</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -420,7 +423,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
             <div class="row">
