--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#our-story">From The Bridegroom</a>
+                        <a class="page-scroll" href="#our-story">From The Groom</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Events</a>
@@ -104,7 +104,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">From the Bridegoom</h2>
+                    <h2 class="section-heading">From the Groom</h2>
                     <h3 class="section-subheading text-muted"><I>It's truly said that "Pairs are made in heaven but they are celebrated on earth" Two hearts, two souls, one love for all time!<br>Your presence will give us immense pleasure! Kindly  treat this e-Invitation as Personal Invitation and grace us with your presence and bestow the best wishes to make the day of our wedding most memorable.  Your presence will multiply our joy and happiness. Awaiting your august presence...</I> - <b> Shyam Jha</b></h3>
                 </div>
             </div>
