--- a/index.html
+++ b/index.html
@@ -374,31 +374,13 @@
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4 class="text-muted">Shyam Jha</h4>
-                        <p class="text-muted">Assistant Engineer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                        <a href="https://www.facebook.com/shyamjha1"><h4 class="text-muted">Shyam Jha</h4></a>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
                         <h4 class="text-muted">Ranjana Mishra</h4>
-                        <p class="text-muted">M.Com Graduate</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             <div class="row">
