added links to timeline

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                     <h4 class="subheading">13<sup>th</sup> December 2016</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Venue: Rama Krishna Mandir, Ashok Vihar Phase 3, Delhi - 110052</p>
+                                    <p class="text-muted">Venue:<a href="https://www.google.co.in/maps/place/Shri+Ram+Krishna+Mandir/@28.6905201,77.1617182,17z/data=!3m1!4b1!4m5!3m4!1s0x390d02391f2aa999:0x842ddf205af51136!8m2!3d28.6905154!4d77.1639069"> Rama Krishna Mandir, Ashok Vihar Phase 3, Delhi - 110052</a></p>
                                 </div>
                             </div>
                         </li>
@@ -288,13 +288,13 @@
                                     <h4 class="subheading">Monday, 13<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 <br><b>Timing:</b> 5 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.co.in/maps/place/28%C2%B036'43.2%22N+77%C2%B002'57.0%22E/@28.6120037,77.0469693,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d28.611999!4d77.049158"> C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 </a><br><b>Timing:</b> 5 PM</p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/5.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -302,7 +302,7 @@
                                     <h4 class="subheading">Thursday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 <br><b>Timing:</b> 7 PM</p>
+                                    <p class="text-muted"><b>Venue:<a href="https://www.google.co.in/maps/place/28%C2%B036'43.2%22N+77%C2%B002'57.0%22E/@28.6120037,77.0469693,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d28.611999!4d77.049158"></b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059</a> <br><b>Timing:</b> 7 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -316,7 +316,7 @@
                                     <h4 class="subheading">Thursday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b>Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084<br><b>Timing:</b>9 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084</a><br><b>Timing:</b>9 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -330,7 +330,7 @@
                                     <h4 class="subheading">Tuesday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b>  C95A (near Sat Saheb Public School),  Nanhe Park, Uttamnagar, Delhi 110059 <br><b>Timing:</b> 10 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084</a><br><b>Timing:</b> 10 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -344,7 +344,7 @@
                                     <h4 class="subheading">Thursday, 21<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b>Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084<br><b>Timing:</b>9 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084</a><br><b>Timing:</b>9 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -380,7 +380,7 @@
                 <div class="col-sm-6">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4 class="text-muted">Ranjana Mishra</h4>
+                        <a href="https://www.facebook.com/"><h4 class="text-muted">Ranjana Kumari</h4></a>
                     </div>
                 </div>
             <div class="row">
