--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- google maps -->
     <section id="maps">
                     <h2 class="section-heading text-center">See On Maps</h2>
-                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3497.992446334719!2d77.19631111457137!3d28.749642485522838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfe28e92a0047%3A0x81fec8c095248759!2sShanti+Kunj+Party+Lawn!5e0!3m2!1sen!2sin!4v1485385852807" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+                         <a href="https://www.google.com/maps?ll=28.749638,77.1985&z=16&t=m&hl=en-US&gl=IN&mapclient=embed&cid=9367145004438685529"><<img src = "img/map/map.png" style= "border: 0px"></a>
     </section>
 
     <!-- maps section closed-->
