map image responsive

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -258,7 +258,7 @@
     <!-- google maps -->
     <section id="maps">
                     <h2 class="section-heading text-center">See On Maps</h2>
-                         <a href="https://www.google.com/maps?ll=28.749638,77.1985&z=16&t=m&hl=en-US&gl=IN&mapclient=embed&cid=9367145004438685529"><<img src = "img/map/map.png" style= "border: 0px"></a>
+                         <a href="https://www.google.com/maps?ll=28.749638,77.1985&z=16&t=m&hl=en-US&gl=IN&mapclient=embed&cid=9367145004438685529"><<img src = "img/map/map.png" class = "img-responsive" style= "border: 0px"></a>
     </section>
 
     <!-- maps section closed-->
