--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
+    <!--Animate.css-->
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+
     <!-- Theme CSS -->
     <link href="css/agency.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -95,8 +98,8 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in bounce">Shyam And Ranjana are tying the knot on</div>
+            <div class="intro-text  animated fadeInLeft">
+                <div class="intro-lead-in">Shyam And Ranjana are tying the knot on</div>
                 <div class="intro-heading">16<sup>th</sup> of February 2017</div>
                 <a href="#about" class="page-scroll btn btn-xl">EVENTS</a>
             </div>
