--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="intro-text  animated fadeInLeft">
+            <div class="intro-text animated rollIn">
                 <div class="intro-lead-in">Shyam And Ranjana are tying the knot on</div>
                 <div class="intro-heading">16<sup>th</sup> of February 2017</div>
                 <a href="#about" class="page-scroll btn btn-xl">EVENTS</a>
