--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#our-story">From The Groom</a>
+                        <a class="page-scroll" href="#our-story">From The Couple</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Events</a>
@@ -109,8 +109,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">From the Groom</h2>
-                    <h3 class="section-subheading text-muted"><I>It's truly said that "Pairs are made in heaven but they are celebrated on earth" Two hearts, two souls, one love for all time!<br>Your presence will give us immense pleasure! Kindly  treat this e-Invitation as Personal Invitation and grace us with your presence and bestow the best wishes to make the day of our wedding most memorable.  Your presence will multiply our joy and happiness. Awaiting your august presence...</I> - <b> Shyam Jha</b></h3>
+                    <h2 class="section-heading">From the Couple</h2>
+                    <h3 class="section-subheading text-muted"><I>It's truly said that "Pairs are made in heaven but they are celebrated on earth" Two hearts, two souls, one love for all time!<br>Your presence will give us immense pleasure! Kindly  treat this e-Invitation as Personal Invitation and grace us with your presence and bestow the best wishes to make the day of our wedding most memorable.  Your presence will multiply our joy and happiness. Awaiting your august presence...</I> - <b> Shyam Jha & Ranjana Kumari</b></h3>
                 </div>
             </div>
         </div>
@@ -180,7 +180,7 @@
                                     <h4 class="subheading">Thursday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084</a><br><b>Timing:</b>9 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank), Burari, Delhi 110084</a><br><b>Timing:</b>9 PM</p>
                                 </div>
                             </div>
                         </li>
@@ -194,21 +194,21 @@
                                     <h4 class="subheading">Tuesday, 16<sup>th</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084</a><br><b>Timing:</b> 10 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank), Burari, Delhi 110084</a><br><b>Timing:</b> 10 PM</p>
                                 </div>
                             </div>
                         </li>
                          <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/6.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Vidaai</h4>
-                                    <h4 class="subheading">Thursday, 21<sup>th</sup> February 2017</h4>
+                                    <h4 class="subheading">Wednesday, 22<sup>nd</sup> February 2017</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.com/maps/place/Shanti+Kunj+Party+Lawn/@28.751613,77.198446,15z/data=!4m5!3m4!1s0x0:0x81fec8c095248759!8m2!3d28.7496378!4d77.1984998?ll=28.751613,77.198446&z=15&t=m&hl=en-GB&gl=IN&mapclient=embed&cid=9367145004438685529">Shanti kunj party lawn, 25 Futa Road, Kamal Vihar (Opp to Canara Bank, Burari, Delhi 110084</a><br><b>Timing:</b>9 PM</p>
+                                    <p class="text-muted"><b>Venue:</b><a href="https://www.google.co.in/maps/place/Gali+Number+5,+Radha+Vihar,+Mukundpur,+Delhi,+110084/@28.7428652,77.1788334,17z/data=!3m1!4b1!4m5!3m4!1s0x390d01c455b0a84d:0xbcdf1c80de5d0562!8m2!3d28.7428605!4d77.1810221">HNo.77, Street No 5, Radha Vihar, Mukund Pur, Delhi 110042</a><br><b>Timing:</b>9 PM</p>
                                 </div>
                             </div>
                         </li>
