--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Shyam Weds Ranjana</title>
+    <title>Shyam Weds Ranjanaa</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
