--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Shyam Weds Ranjanaa</title>
+    <title>hello brother</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
             background: #4D021B;
         }
         #map{
-            height: 400px;
+            height: 800px;
             width: 100%;
             background-color: grey;
        }
